flarestyle.css
/* ... */
.bttbutton:hover {
  background: url("/res/uparrowred.svg") no-repeat;
  filter: saturate(1);
  background-size: 75%;
  background-position: center;
  background-color: white;
  border-radius: 25%;
  border-color: #e6e6e6;
  border-style: solid;
  border-width: 2px;
}

#loadMore {
  margin-left: auto;
  margin-right: auto;
  margin-top: 25px;
  margin-bottom: 0px;
  width: 125px;
  height: 35px;
  background-color: white;
  border-radius: .5em;
  box-shadow: 1px 4px 12px #5858586b;
  font-size: 20px;
  font-family: "Franklin Gothic Light";
  text-align: center;
  padding-top: 9px;
}

#loadMore:hover {
  font-family: "Franklin Gothic Light";
  color: red;
  cursor: pointer;
}

.loadingGif{
  display: block;
  background: url(/res/loading.gif) no-repeat;
  background-size: contain;
  width: 90px;
  height: 90px;
  margin-left: auto;
  margin-right: auto;
}


/*projects page*/

.projectPreview{
  display: flex;
  justify-content: center;
  align-items: center;
  width: 875px;
  height: 150px;
  overflow: hidden;
  text-align: center;
  text-decoration: none;
  background-size: cover;
  background-position: center;
  box-shadow: inset 1px 4px 12px #0000006b;
  margin-bottom: 9px;
  margin-left: auto;
  margin-right: auto;
  border-radius: 0em;
}

.projectGroup{
  width: 907px;
  background-color: white;
  padding-bottom: 10px;
  margin-left: auto;
  margin-right: auto;
  box-shadow: 1px 4px 12px #5858586b;
}

.projectHeader{
  display: block;
  text-align: center;
  background-color: red;
  box-shadow: 0px 5px 6px -2px #5858586b;
  width: 875px;
  margin-top: 10px;
  margin-bottom: 10px;
  margin-left: auto;
  margin-right: auto;
  padding: 1px 16px;
}

.projectTitle{
  position:absolute;
  max-height:120px;
  max-width:77vw;
  pointer-events:none;
}

.blurArea{
  width:100%;
  height:100%;
  transition-duration: .5s;
}

.blurArea:hover{
  backdrop-filter: blur(3px) saturate(.5);
}

/*Magazine stuff */

.magazinePage {
  width: 850px;
  height: 1100px;
  box-shadow: 1px 4px 12px #00000050;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 40px;
  background:white;
}

/* Mobile changes */

@media only screen and (max-width: 1000px) {
#linkstile {
  background: url("/res/linksred.png") no-repeat;
  background-size: contain;
  background-position: center;
}

#blogtile {
  background: url("/res/blogred.png") no-repeat;
  background-size: contain;
  background-position: center;
}

#arttile {
  background: url("/res/artred.png") no-repeat;
  background-size: contain;
  background-position: center;
}

#projectstile {
  background: url("/res/projectsred.png") no-repeat;
  background-size: contain;
  background-position: center;
}

.topcover {
  position: relative;
  min-height: 100%;
  height: 100%;
  box-sizing: border-box;
  overflow-x: hidden;
  overflow-y: hidden;
  background-color: transparent;
  margin: -8px;
}

.tilearray {
  flex-direction:row;
  transform: translateY(-7vmin);
}

.frontTile{
  width:45vw;
}

.newgrounds {
  display: inline-block;
  background: url("/res/newgrounds.png") no-repeat;
  background-size: contain;
  width: 55vmin;
  height: 15vmin; 
  margin: 2em;
}

.youtube {
  display: inline-block;
  background: url("/res/youtube.png") no-repeat;
  background-size: contain;
  width: 55vmin;
  height: 15vmin; 
  margin: 2em;
}

.twitter {
  display: inline-block;
  background: url("/res/twitter.png") no-repeat;
  background-size: contain;
  width: 55vmin;
  height: 15vmin; 
  margin: 2em;
}

.twitch {
  display: inline-block;
  background: url("/res/twitch.png") no-repeat;
  background-size: contain;
  width: 55vmin;
  height: 15vmin; 
  margin: 2em;
}

.post {
  display: block;
  width:auto;
  padding: 1px 16px 4px;
  margin-top: 10px;
  margin-bottom: 10px;
  margin-left: 1em;
  margin-right: 1em;
}

.ad {
  display: block;
  width: auto;
  margin-top: 10px;
  margin-bottom: 10px;
  margin-left: 1em;
  margin-right: 1em;
}

.bttbutton {
  background: url("/res/uparrowred.svg") no-repeat;
  background-size: 75%;
  background-position: center;
  background-color: white;
  border-radius: 25%;
  border-color: #e6e6e6;
  border-style: solid;
  border-width: 2px;
  display: block;
  z-index: 99;
  position: fixed;
  width: 35px;
  height: 35px;
  right:15px;
  bottom: 15px;
}

#loadMore {
  margin-left: auto;
  margin-right: auto;
  margin-top: 25px;
  margin-bottom: 0px;
  width: 125px;
  height: 35px;
  background-color: white;
  border-radius: .5em;
  box-shadow: 1px 4px 12px #5858586b;
  font-size: 20px;
  font-family: "Franklin Gothic Light";
  text-align: center;
  padding-top: 9px;
  color: red;
  user-select: none;
}

.projectPreview{
  width:auto;
  margin-left: 1em;
  margin-right: 1em;
}

.projectGroup {
  width:auto;
  margin-left: 1em;
  margin-right: 1em;
}

.projectHeader{
  width:auto;
  margin-left: 0px;
  margin-right: 0px;
}

.imageHolder {
  background-color: white;
  box-shadow: 1px 4px 12px #5858586b;
  height: auto;
  width: 80%;
  border-radius: .8em;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}

.imageInHolder {
  flex-shrink: 0;
  height: auto;
  width: 100%;
}

.popup {
  display: block;
  position: fixed;
  margin: 1% 4%;
  left: 0;
  right: 0;
  max-width: -webkit-fill-available;
  height: min-content;
  background-color: #00000000;
  box-shadow: 0px 0px 0px #0000008c;
  border-radius: 0em;
  overflow: hidden;
  z-index: 2000;
}

.popup img {
  height: auto;
  width: 100%;
}

.yt{
  width:300px;
  height:169px;
}

}

